feat(grades): add model grades to api

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -38,5 +38,9 @@
   "Courses": {
     "dataSource": "db",
     "public": true
+  },
+  "Grades": {
+    "dataSource": "db",
+    "public": true
   }
 }
