feat(students): add model students to api

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -42,5 +42,9 @@
   "Grades": {
     "dataSource": "db",
     "public": true
+  },
+  "Students": {
+    "dataSource": "db",
+    "public": true
   }
 }
