feat(teachers): add model teachers to api

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -46,5 +46,9 @@
   "Students": {
     "dataSource": "db",
     "public": true
+  },
+  "Teachers": {
+    "dataSource": "db",
+    "public": true
   }
 }
