feat(groups): add model groups to api

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -50,5 +50,9 @@
   "Teachers": {
     "dataSource": "db",
     "public": true
+  },
+  "Groups": {
+    "dataSource": "db",
+    "public": true
   }
 }
