feat(groupstudents): add model groupstudents to api

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -54,5 +54,9 @@
   "Groups": {
     "dataSource": "db",
     "public": true
+  },
+  "GroupStudents": {
+    "dataSource": "db",
+    "public": true
   }
 }
