--- a/server/model-config.json
+++ b/server/model-config.json
@@ -36,27 +36,27 @@
     "public": false
   },
   "Courses": {
-    "dataSource": "db",
+    "dataSource": "celex-db",
     "public": true
   },
   "Grades": {
-    "dataSource": "db",
+    "dataSource": "celex-db",
     "public": true
   },
   "Students": {
-    "dataSource": "db",
+    "dataSource": "celex-db",
     "public": true
   },
   "Teachers": {
-    "dataSource": "db",
+    "dataSource": "celex-db",
     "public": true
   },
   "Groups": {
-    "dataSource": "db",
+    "dataSource": "celex-db",
     "public": true
   },
   "GroupStudents": {
-    "dataSource": "db",
+    "dataSource": "celex-db",
     "public": true
   }
 }
